opam-version: "2.0"
synopsis: "Melange bindings for Jest"
description: "Melange bindings for Jest JavaScript library."
maintainer: [
  "Javier Chávarri <javier.chavarri@gmail.com>"
]
authors: [
  "glennsl"
  "Neil Kistner <neil.kistner@gmail.com>"
]
license: "MIT"
homepage: "https://github.com/melange-community/melange-jest/"
doc: "https://github.com/melange-community/melange-jest/"
bug-reports: "https://github.com/melange-community/melange-jest/issues"
depends: [
  "dune" {>= "3.8"}
  "ocaml" {>= "4.14.0"}
  "melange" {>= "1.0.0"}
  "reason" {with-test}
  "melange-webapi" {dev}
  "ocaml-lsp-server" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/melange-community/melange-jest.git"
