opam-version: "2.0"
synopsis: "Melange bindings for Jest"
description: "Melange bindings for Jest JavaScript library."
maintainer: [
  "Javier Chávarri <javier.chavarri@gmail.com>"
]
authors: [
  "glennsl"
  "Neil Kistner <neil.kistner@gmail.com>"
]
license: "MIT"
tags: ["melange" "org:melange-community"]
homepage: "https://github.com/melange-community/melange-jest/"
doc: "https://github.com/melange-community/melange-jest/"
bug-reports: "https://github.com/melange-community/melange-jest/issues"
depends: [
  "dune" {>= "3.8"}
  "ocaml" {>= "4.14.0"}
  "melange" {>= "1.0.0"}
  "reason" {with-test}
  "melange-webapi" {dev}
  "ocaml-lsp-server" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/melange-community/melange-jest.git"
pin-depends: [
  [ "melange.dev" "git+https://github.com/melange-re/melange.git#a662d964185d862bc31e7854cf0c9988d6f23429" ]
  [ "melange-webapi.dev" "git+https://github.com/melange-community/melange-webapi.git#5689d101c5fc6c0d8033ddf2af3a5d0c18e855e7" ]
  [ "melange-fetch.dev" "git+https://github.com/melange-community/melange-fetch.git#d2183ec245cbf5c7a8f99f8c41d2de0758c8cda7" ]
]
