opam-version: "2.0"
synopsis: "Melange bindings for Jest"
description: "Melange bindings for Jest JavaScript library."
maintainer: [
  "Javier Chávarri <javier.chavarri@gmail.com>"
]
authors: [
  "glennsl"
  "Neil Kistner <neil.kistner@gmail.com>"
]
license: "MIT"
tags: ["melange" "org:melange-community"]
homepage: "https://github.com/melange-community/melange-jest/"
doc: "https://github.com/melange-community/melange-jest/"
bug-reports: "https://github.com/melange-community/melange-jest/issues"
depends: [
  "dune" {>= "3.8"}
  "ocaml"
  "melange" {>= "2.0.0"}
  "reason" {with-test}
  "melange-webapi" {with-test}
  "opam-check-npm-deps" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "ocaml-lsp-server" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/melange-community/melange-jest.git"
depexts: [
  ["jest"] {npm-version = "^26.5.2"}
  ["@testing-library/jest-dom"] {npm-version = "^5.10.0"}
]
pin-depends: [
  [ "melange.2.0.0"         "git+https://github.com/melange-re/melange.git#e114ad55d185badeb32b3c766c9ab547495eac1b" ]
  [ "reason.3.10.0"         "git+https://github.com/reasonml/reason.git#972261dab3b651ff8ab9b8b9fcc32940595073dc" ]
  [ "melange-webapi.dev"    "git+https://github.com/melange-community/melange-webapi.git#96dc1e2a867624d18050fad25cf1c71af7a098e1" ]
  [ "melange-fetch.dev"     "git+https://github.com/melange-community/melange-fetch.git#796f941b6b85eb7e6182ac6e4f40708bfde7a9a9" ]
]
